# llm_clients

./: README.md  pylint_results.txt  pyproject.toml
.config/revChatGPT/: config.json
notebooks/: revChatGPT.ipynb  serpapi search.ipynb
src/: .env.sample  bard_console_client.py  bard_console_client.py.lnk  bard_console_example.py  bard_console_example.py.lnk  chatgpt_console_app.py  console_app.py  searcher.py  searcher_console_app.py  searcher_console_app.py.lnk  sydney_console_client.py  sydney_console_client.py.lnk
tests/: conftest.py  test_searcher.py  test_searcher_console_app.py
