[tool.poetry]
name = "llm-experiments"
version = "0.1.0"
description = "no description yet"
authors = ["kolommik <mikhail.kolomasov@gmail.com>"]
license = "None"
readme = "README.md"
packages = [{include = "llm_experiments"}]

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.0"
rich = "^13.3.4"
requests = "^2.28.2"
google-search-results = "^2.4.2"
openai = "^0.27.4"
tiktoken = "^0.3.3"
aiohttp = "^3.8.4"
websockets = "^11.0.2"
deep-translator = "^1.11.1"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
mypy = "^1.2.0"
pylint = "^2.17.2"
ipykernel = "^6.22.0"
flake8 = "^6.0.0"
pytest = "^7.3.1"
pytest-mock = "^3.10.0"
coverage = "^7.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
